Tue Dec 21 13:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Fixes suggested by karl@nfox.com
	* Source/propList.h: Bugfix parsing larger lists.
	* Source/NSProcessInfo.m: Avoid use of freopen()
	* Source/GSeq.h: for ranges not found, return NSNotFound as the
	location rather than 0 - for compatibility with Apple.
	* NSDeserializer.m: Return nil if given nil data or an object that
	is not a data object.

1999-12-19  David Lazaro  <khelekir@encomix.es>

	* configure.in (objc_thread_lib): Added support for FreeBSD native
	POSIX threads (from the reentrant C library, libc_r).  Made this the
	first option to test as this is the best working one.
	* configure: New build to support the above mentioned.

Fri Dec 17 17:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Fix error in last change.

Fri Dec 17  7:03:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSGAttributedString.m: Patch (slightly modified) by Adam Fedor
	to permit setting attributes on an empty string (as a no-op).

Wed Dec 15 18:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSHost.m: Update again - record current host name for duration
	of process and cache hosts keyed on the name under which they were
	created.  This can result in multiple cache entries for the same host,
	but this seems to be necessary as DNS name <--> address mappings can
	be asymmetric.
	Thanks to dan@services.iiruc.ro for pointing this out.

Wed Dec 15 17:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Foundation/NSObject.h: dealloc notification stuff for Helge
	* Source/NSObject.m: dealloc notification stuff for Helge

Wed Dec 15  2:18:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/UnixFileHandle.m: Chck to see if we are given a bad address.
	* Source/NSHost.m: major rewrite

Tue Dec 14  8:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
